# waf-defense-rulepacks

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
aws-waf/: aws_waf_admin_path_deny_by_default_pack.json  aws_waf_admin_surface_restriction_allowlist.json  aws_waf_geo_restriction_admin_internal_paths.json  aws_waf_geomatch_country_allow_deny_baseline.json  aws_waf_http_method_enforcement_baseline.json  aws_waf_ja3_tls_fingerprint_allowlist_monitoring_pack.json  aws_waf_json_body_size_restriction_api_pack.json  aws_waf_managed_rule_extension_pack.json  aws_waf_missing_user_agent_high_risk_paths_pack.json  aws_waf_oversized_body_handling_pack.json  aws_waf_referer_header_enforcement_sensitive_paths_pack.json  aws_waf_restricted_content_type_api_pack.json  aws_waf_sqli_uri_query_virtual_patch_pack.json  custom_rules.json  managed_rule_groups.json
azure-waf/: app_gateway_policy.json  azure_waf_admin_path_restriction_baseline.json  front_door_policy.json
cli/: waf_catalog_cmd.py  waf_export_cmd.py
cloudflare/: cloudflare-graphql-introspection-blocking-baseline.json  cloudflare_cache_poisoning_header_normalization_pack.json  cloudflare_directory_traversal_evasion_variants_pack.json  cloudflare_file_upload_endpoint_hardening_pack.json  cloudflare_graphql_introspection_blocking_pack.json  cloudflare_http_method_allowlist_sensitive_routes_pack.json  cloudflare_open_redirect_parameter_guard_pack.json  cloudflare_origin_access_lockdown_pack.json  cloudflare_owasp_top10_ruleset.json  index.json  (+8 more)
docs/: overview.md  (+3 more)
(+111 files in other folders)
