[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waf-defense-rulepacks"
version = "0.1.0"
description = "Defensive WAF rulepacks, validators, and export tooling for the Cyber Port portfolio."
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-4.0"
authors = [
  { name = "Hiago Kin Levi" }
]
dependencies = [
  "click>=8.1,<9",
  "jsonschema>=4.0,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9"
]

[project.scripts]
waf-export = "cli.waf_export_cmd:waf_export_cmd"
waf-catalog = "cli.waf_catalog_cmd:waf_catalog_cmd"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cli*", "shared*"]

[tool.setuptools.package-data]
"shared.schemas" = ["*.json"]
